fixed issue with scrape_mars.py

--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,59 +10,39 @@
     "from bs4 import BeautifulSoup\n",
     "from webdriver_manager.chrome import ChromeDriverManager\n",
     "import requests\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from pprint import pprint\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[WDM] - ====== WebDriver manager ======\n",
-      "[WDM] - Current google-chrome version is 89.0.4389\n",
-      "[WDM] - Get LATEST driver version for 89.0.4389\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[WDM] - Driver [/Users/pramodphilip/.wdm/drivers/chromedriver/mac64/89.0.4389.23/chromedriver] found in cache\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# URL for NASA Mars News Site\n",
     "url = 'https://mars.nasa.gov/news/?page=0&per_page=40&order=publish_date+desc%2Ccreated_at+desc&search=&category=19%2C165%2C184%2C204&blank_scope=Latest'\n",
     "\n",
+    "# Creaters browser window for scraping\n",
     "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
     "browser = Browser('chrome', **executable_path, headless=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Visits url, creates soup object\n",
     "browser.visit(url)\n",
     "soup = BeautifulSoup(browser.html, 'html.parser')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,21 +51,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Another First: Perseverance Captures the Sounds of Driving on Mars'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Finds news titles, isolates first one\n",
     "titles = soup.find_all('div',class_='content_title')\n",
     "news_title = titles[1].text.strip()\n",
     "news_title"
@@ -93,96 +63,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'NASA’s newest rover recorded audio of itself crunching over the surface of the Red Planet, adding a whole new dimension to Mars exploration.'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Finds paragraph text\n",
     "news_p = soup.find('div',class_='article_teaser_body').text\n",
     "news_p"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "jpl_url = 'https://www.jpl.nasa.gov/images?search=&category=Mars'"
+    "# URL for JPL Featured Space Image, visits site\n",
+    "jpl_url = 'https://www.jpl.nasa.gov/images?search=&category=Mars'\n",
+    "browser.visit(jpl_url)\n",
+    "browser.reload()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "browser.visit(jpl_url)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Creates target for browser to click \n",
+    "# to page with full sized image\n",
     "target = 'a[class=\"group  cursor-pointer block\"]'\n",
-    "browser.find_by_tag(target).click()      "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<div class=\"lg:w-auto w-full\" data-v-0526c969=\"\"><a class=\"BaseButton text-contrast-none w-full mb-5 -primary -compact inline-block\" data-v-0526c969=\"\" href=\"https://d2pn8kiwq2w21t.cloudfront.net/original_images/jpegPIA24505.jpg\"><span class=\"label block\">Download JPG </span></a></div>,\n",
-       " <div class=\"lg:w-auto w-full\" data-v-0526c969=\"\"><a class=\"BaseButton text-contrast-none w-full -secondary -compact inline-block\" data-v-0526c969=\"\" href=\"https://photojournal.jpl.nasa.gov/tiff/PIA24505.tif\"><span class=\"label block\">Download TIFF </span></a></div>]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "browser.find_by_tag(target).click()   \n",
+    "\n",
+    "#Pauses for a few seconds before grabbing page HTML\n",
+    "time.sleep(3)\n",
+    "\n",
+    "# Grabs html, creates soup object\n",
     "html = browser.html\n",
     "soup = BeautifulSoup(html,'html.parser')\n",
     "\n",
-    "images = soup.find_all('div',class_=\"lg:w-auto w-full\")\n",
-    "images"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://d2pn8kiwq2w21t.cloudfront.net/original_images/jpegPIA24505.jpg'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "featured_image_url = images[0].a['href']\n",
+    "# Finds div tags with full size image urls inside\n",
+    "images = soup.find('div',class_=\"lg:w-auto w-full\")\n",
+    "\n",
+    "# Isolates image url for full size jpeg\n",
+    "featured_image_url = images.a['href']\n",
     "featured_image_url"
    ]
   },
@@ -192,6 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Mars Facts URL\n",
     "facts_url = 'https://space-facts.com/mars/'"
    ]
   },
@@ -201,6 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Reads HTML into Pandas Dataframe\n",
     "tables = pd.read_html(facts_url)\n",
     "tables"
    ]
@@ -211,6 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Grabs first table and renames columns\n",
     "df = tables[0]\n",
     "df.columns = ['Fact','Value']\n",
     "df"
@@ -222,6 +149,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Converts table dataframe back to HTML\n",
     "facts_html = df.to_html()\n",
     "facts_html"
    ]
@@ -232,6 +160,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Replaces \\n in HTML with blanks\n",
     "facts_html.replace('\\n', '')"
    ]
   },
@@ -241,7 +170,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_html('mars_facts.html')"
+    "# Exports HTML to HTML file\n",
+    "#df.to_html('mars_facts.html')"
    ]
   },
   {
@@ -250,7 +180,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!open mars_facts.html"
+    "# (For MAC OS Users) opens new tab to see mars facts HTML\n",
+    "#!open mars_facts.html"
    ]
   },
   {
@@ -259,6 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Mars Hemispheres URL\n",
     "url = 'https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars'"
    ]
   },
@@ -268,6 +200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Visits Mars Hemispheres URL\n",
     "browser.visit(url)"
    ]
   },
@@ -277,8 +210,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Establishes empty list for dictionaries with\n",
+    "# hemisphere information\n",
     "hemisphere_image_urls = []\n",
     "\n",
+    "# Grabs HTML for current page, creates soup object\n",
     "html = browser.html\n",
     "soup = BeautifulSoup(html,'html.parser')"
    ]
@@ -289,6 +225,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Grabs headers for each hemisphere\n",
     "headers = soup.find_all('div', class_=\"description\")\n",
     "headers"
    ]
@@ -322,6 +259,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Loops through headers\n",
+    "# Pulls the title and img URL for each hemisphere\n",
     "for x in range(len(headers)):\n",
     "    ref = headers[x].h3.text\n",
     "    browser.find_by_text(ref).click()\n",
